--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  firebase_core: ^0.4.0+9
+  firebase_database: ^3.1.1
+
 
 
 # For information on the generic Dart part of this file, see the
